ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-result-ingress
spec:
  rules:
  - host: voting.dogsvscats.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: voting-service
            port:
              number: 80
  - host: result.dogsvscats.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result-service
            port:
              number: 80
